[package]
name = "llama3_worker"
version = "0.1.0"
edition = "2024"
default-run = "llama3_worker" # 오타(workder) 주의! 하이픈(-) 대신 언더스코어(_) 사용!

[[bin]]
name = "llama3_worker"
path = "src/main.rs"

[dependencies]
# UI 프레임워크
leptos = { version = "0.8.15", features = ["csr"] }
console_error_panic_hook = "0.1"

# 인공지능 엔진
candle-core = "0.9.2"
candle-transformers = "0.9.2"
tokenizers = { version = "0.21.0", default-features = false, features = ["unstable_wasm"] }

# 유틸리티
reqwest = { version = "0.11", features = ["json"] }
gloo-timers = { version = "0.3", features = ["futures"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WASM 브릿지 및 비동기 처리
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

# 난수 생성기
getrandom = { version = "0.3", features = ["wasm_js"] }

# 웹 브라우저 API 권한
[dependencies.web-sys]
version = "0.3"
features = [
    "Window", 
    "Location", 
    "console", 
    "Worker", 
    "MessageEvent", 
    "DedicatedWorkerGlobalScope", 
    "WorkerLocation"
]

[profile.release]
opt-level = 3        # 최고 수준의 속도 최적화
lto = true           # 링크 타임 최적화 (코드를 하나로 뭉쳐서 속도 극대화)
codegen-units = 1    # 병렬 빌드를 포기하는 대신 결과물 속도 향상
panic = "abort"      # 에러 발생 시 추적 코드를 빼서 용량/속도 이득